fixed spacing on home, join, new - added home links to join & new

--- a/src/styles/JoinPage.scss
+++ b/src/styles/JoinPage.scss
@@ -10,4 +10,8 @@ main {
   p {
     margin: 1em; 
   }
+
+  .joinInstructions {
+    padding-bottom: $mobile-col-2 * 0.75vh;
+  }
 }
