--- a/src/styles/NewGamePage.scss
+++ b/src/styles/NewGamePage.scss
@@ -11,4 +11,8 @@ main {
     margin: 1em; 
     text-align: center;
   }
+
+  .instructions {
+    padding-bottom: $mobile-col-3 * 0.75vh;
+  }
 }
